# delorian

./: .gitignore  Cargo.toml  README.md
assets/datasets/: exp_1_cases.json
benches/: Cargo.toml  README.md  sources_benchmark.rs
data/: README.md  exp_1_cases.json
delorian/: Cargo.toml  README.md
delorian-analytics/: Cargo.toml  README.md
delorian-analytics/src/: lib.rs  metrics.rs  processing.rs  tables.rs
delorian-data/: Cargo.toml  README.md
delorian-data/src/: clients.rs  data.rs  decoder.rs  files.rs  lib.rs  processing.rs  types.rs
delorian-results/: Cargo.toml
delorian-results/src/: errors.rs
delorian/src/: main.rs
examples/: Cargo.toml  README.md  deserializing.rs  experiment_pf.rs  historical_transactions.rs  solana_transactions.rs
tests/: Cargo.toml  README.md  connectors.rs  solana_client.rs
