[package]
name = "delorian-results"
description = "Standardized results, errors and successes, for the Delorian project"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]

# Error Handling
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

