[package]
name = "examples"
description = "end-to-end examples for the Delorian project"
version = "0.0.1"
publish = false

edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true
repository.workspace = true

[dev-dependencies]

# Atelier sub-modules 
delorian = { path = "../delorian", version = "0.0.1" }
delorian-analytics = { path = "../delorian-analytics", version = "0.0.1" }
delorian-data = { path = "../delorian-data", version = "0.0.1" }
delorian-results = { path = "../delorian-results", version = "0.0.1" }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Compute
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = { version = "1.5" }
bs58 = { workspace = true }
borsh = { version = "0.9" }

[[example]]
name = "experiment_pf"
path = "experiment_pf.rs"

[[example]]
name = "historical_transactions"
path = "historical_transactions.rs"

[[example]]
name = "solana_transactions"
path = "solana_transactions.rs"

[[example]]
name = "deserializing"
path = "deserializing.rs"

[lints]
workspace = true
